--- a/AngularDemo/my-app/src/app/components/header/header.component.html
+++ b/AngularDemo/my-app/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
     {{ title }}
   </h1>
   <app-button
-    color="green"
-    text="Hello"
+    color="{{ showAddTask ? 'red' : 'green' }}"
+    text="{{ showAddTask ? 'Close' : 'Add' }}"
     (btnClick)="toggleAddTask()"
   ></app-button>
 </header>
